netsci website updates
netsci website updates

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6636,7 +6636,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6805,11 +6805,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rTVkmHJjuwJj
-								uf4/BuPCeA==
+								T0gTaFVnywW4
+								c7HBrnPIZQ==
 								</data>
 								<key>Size</key>
-								<integer>138409</integer>
+								<integer>138397</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6842,7 +6842,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7051,11 +7051,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZyLAouPsB0hi
-								9NZ/DtUXZA==
+								sDcO0YlSyjYC
+								Y6A6zEDE2A==
 								</data>
 								<key>Size</key>
-								<integer>148800</integer>
+								<integer>149924</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7071,11 +7071,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ivNUGQUaQMCL
-								B/Shs6s1Iw==
+								CBMoSUyLr5xJ
+								L4epBR1jWA==
 								</data>
 								<key>Size</key>
-								<integer>83899</integer>
+								<integer>84794</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7088,7 +7088,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7157,11 +7157,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hfinBALGYvjS
-								NQtMjHH8Dg==
+								NjUysk1kNOSn
+								+LcR81v8Dw==
 								</data>
 								<key>Size</key>
-								<integer>104221</integer>
+								<integer>104212</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -7194,7 +7194,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7263,11 +7263,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MfDRWNJ2RvgE
-								To648Riytg==
+								HJ4xinXI4jc+
+								gVume8tJpQ==
 								</data>
 								<key>Size</key>
-								<integer>123788</integer>
+								<integer>124905</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -7283,11 +7283,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AZYsn9uHssVc
-								VOqMgFrUWw==
+								bWB7MB4nB1cZ
+								qcGZoaodRg==
 								</data>
 								<key>Size</key>
-								<integer>53354</integer>
+								<integer>54255</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7300,7 +7300,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7359,11 +7359,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dz1xL/AfGbZk
-								ZZgX1MQYwA==
+								kyYdhVD8yKbX
+								IHUO8VA2sA==
 								</data>
 								<key>Size</key>
-								<integer>126882</integer>
+								<integer>125979</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -7379,11 +7379,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ncebotY4GuMz
-								ThSiTBHZ8g==
+								vj26q1nSNRX9
+								SILckliUiA==
 								</data>
 								<key>Size</key>
-								<integer>53425</integer>
+								<integer>53115</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7396,7 +7396,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7465,11 +7465,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								trh/SwA2Vqra
-								u/HMTTjJLQ==
+								pAiQI/pyvEIy
+								+VUPv7sg0Q==
 								</data>
 								<key>Size</key>
-								<integer>120068</integer>
+								<integer>120057</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -7502,7 +7502,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7671,11 +7671,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XnCpQ+p5MjFz
-								T/8yNEuH5g==
+								aVsQ63Xdy/We
+								Iv4k+XO35w==
 								</data>
 								<key>Size</key>
-								<integer>137580</integer>
+								<integer>137569</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -7708,7 +7708,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7777,11 +7777,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NfreLISUFtEH
-								twC+PpNebw==
+								i0bENzOBnB6J
+								QsV2gUoWvA==
 								</data>
 								<key>Size</key>
-								<integer>104241</integer>
+								<integer>104232</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -8156,7 +8156,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8215,11 +8215,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CQuoHdEBws/T
-								9sd/Op/hvw==
+								iuVgXyBCoVJf
+								tDRQr/qXEQ==
 								</data>
 								<key>Size</key>
-								<integer>103814</integer>
+								<integer>103805</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
@@ -8252,7 +8252,7 @@
 					<key>page63 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T18:41:14Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8311,11 +8311,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qWqz9okFuyEQ
-								ePuYyjbuvw==
+								dBUnQ8hHAC4a
+								7cz7f4XsbA==
 								</data>
 								<key>Size</key>
-								<integer>104320</integer>
+								<integer>104311</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -8348,7 +8348,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8427,11 +8427,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9ZjmdKblhMQE
-								vvkyuEUtEg==
+								VlzOsqHjJg21
+								/nAg4MMrwQ==
 								</data>
 								<key>Size</key>
-								<integer>104202</integer>
+								<integer>104193</integer>
 							</dict>
 							<key>index_files/stacks_page_page65.js</key>
 							<dict>
@@ -8922,7 +8922,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T15:42:08Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8971,11 +8971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								S244ArTz984u
-								VNojfJm1Ag==
+								7014jBZLS93n
+								qnupGxxLdQ==
 								</data>
 								<key>Size</key>
-								<integer>4100</integer>
+								<integer>4068</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9024,7 +9024,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T15:42:08Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10063,11 +10063,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								c5ejAW3nLcs+
+								aWNaZxvzrA==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3253</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10171,7 +10171,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HArJ6pIKqogAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HArLcSoZE2gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10182,7 +10182,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCsnqkgrvuA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCstxKhlLiA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
