--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MfDRWNJ2RvgE
-								To648Riytg==
+								HJ4xinXI4jc+
+								gVume8tJpQ==
 								</data>
 								<key>Size</key>
-								<integer>123788</integer>
+								<integer>124905</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AZYsn9uHssVc
-								VOqMgFrUWw==
+								bWB7MB4nB1cZ
+								qcGZoaodRg==
 								</data>
 								<key>Size</key>
-								<integer>53354</integer>
+								<integer>54255</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
