--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CQuoHdEBws/T
-								9sd/Op/hvw==
+								iuVgXyBCoVJf
+								tDRQr/qXEQ==
 								</data>
 								<key>Size</key>
-								<integer>103814</integer>
+								<integer>103805</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
