--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dz1xL/AfGbZk
-								ZZgX1MQYwA==
+								kyYdhVD8yKbX
+								IHUO8VA2sA==
 								</data>
 								<key>Size</key>
-								<integer>126882</integer>
+								<integer>125979</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ncebotY4GuMz
-								ThSiTBHZ8g==
+								vj26q1nSNRX9
+								SILckliUiA==
 								</data>
 								<key>Size</key>
-								<integer>53425</integer>
+								<integer>53115</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
