--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZyLAouPsB0hi
-								9NZ/DtUXZA==
+								sDcO0YlSyjYC
+								Y6A6zEDE2A==
 								</data>
 								<key>Size</key>
-								<integer>148800</integer>
+								<integer>149924</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ivNUGQUaQMCL
-								B/Shs6s1Iw==
+								CBMoSUyLr5xJ
+								L4epBR1jWA==
 								</data>
 								<key>Size</key>
-								<integer>83899</integer>
+								<integer>84794</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
