--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T18:41:14Z</date>
+						<date>2018-09-24T19:10:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qWqz9okFuyEQ
-								ePuYyjbuvw==
+								dBUnQ8hHAC4a
+								7cz7f4XsbA==
 								</data>
 								<key>Size</key>
-								<integer>104320</integer>
+								<integer>104311</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
