updated speaker list
updated speaker list

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -3256,7 +3256,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T15:40:42Z</date>
+						<date>2018-09-24T23:48:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3531,26 +3531,6 @@
 								<key>Size</key>
 								<integer>354232</integer>
 							</dict>
-							<key>files/stacks-image-c8d05d0-261x251.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gHccM48+cLRU
-								AG+GE2HUdg==
-								</data>
-								<key>Size</key>
-								<integer>87781</integer>
-							</dict>
-							<key>files/stacks-image-c8d05d0-261x251@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								mRgndT4jFIzn
-								TuBSisqjPg==
-								</data>
-								<key>Size</key>
-								<integer>326541</integer>
-							</dict>
 							<key>files/stacks-image-c9f8f3e-300x168.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3581,26 +3561,6 @@
 								<key>Size</key>
 								<integer>24969</integer>
 							</dict>
-							<key>files/stacks-image-f24159b-261x251.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gHccM48+cLRU
-								AG+GE2HUdg==
-								</data>
-								<key>Size</key>
-								<integer>87781</integer>
-							</dict>
-							<key>files/stacks-image-f24159b-261x251@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								mRgndT4jFIzn
-								TuBSisqjPg==
-								</data>
-								<key>Size</key>
-								<integer>326541</integer>
-							</dict>
 							<key>files/stacks-image-fedaa0e-259x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3625,31 +3585,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								E4WG34nr3rvi
-								DVAwuqAGCw==
+								fN4dhE4wPEoM
+								kdYrUyjIyQ==
 								</data>
 								<key>Size</key>
-								<integer>186422</integer>
+								<integer>181985</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZH8nBiI5bm/8
-								tai8ORvi1w==
+								4RqQKM2LyniV
+								/QzLFs7dlw==
 								</data>
 								<key>Size</key>
-								<integer>26533</integer>
+								<integer>26351</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7HGwAYtBmeEo
-								7zuYEHkxpQ==
+								bZ4CSyQewwZM
+								kJwF54ORRw==
 								</data>
 								<key>Size</key>
-								<integer>126272</integer>
+								<integer>122355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5462,7 +5422,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T18:41:14Z</date>
+						<date>2018-09-24T23:50:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5837,26 +5797,6 @@
 								<key>Size</key>
 								<integer>354232</integer>
 							</dict>
-							<key>files/stacks-image-c8d05d0-261x251.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gHccM48+cLRU
-								AG+GE2HUdg==
-								</data>
-								<key>Size</key>
-								<integer>87781</integer>
-							</dict>
-							<key>files/stacks-image-c8d05d0-261x251@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								mRgndT4jFIzn
-								TuBSisqjPg==
-								</data>
-								<key>Size</key>
-								<integer>326541</integer>
-							</dict>
 							<key>files/stacks-image-e4ff3fb-250x72.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5876,26 +5816,6 @@
 								</data>
 								<key>Size</key>
 								<integer>24969</integer>
-							</dict>
-							<key>files/stacks-image-f24159b-261x251.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gHccM48+cLRU
-								AG+GE2HUdg==
-								</data>
-								<key>Size</key>
-								<integer>87781</integer>
-							</dict>
-							<key>files/stacks-image-f24159b-261x251@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								mRgndT4jFIzn
-								TuBSisqjPg==
-								</data>
-								<key>Size</key>
-								<integer>326541</integer>
 							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
@@ -5931,21 +5851,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NuX0bDZ+jat+
-								6j7IoAAUzg==
+								IMJEiCIVd4TV
+								HwsUlApWDA==
 								</data>
 								<key>Size</key>
-								<integer>201288</integer>
+								<integer>196851</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								IvKXc8WeZenb
-								Dcg0vcyGxQ==
+								TIK1AuMS1oaY
+								sGFJlvpF0A==
 								</data>
 								<key>Size</key>
-								<integer>30703</integer>
+								<integer>30521</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -5961,11 +5881,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9rXamXikCV6f
-								SEq1Ur3S7A==
+								MIn0dspKF0xB
+								BcbDNYFezg==
 								</data>
 								<key>Size</key>
-								<integer>157545</integer>
+								<integer>153489</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9034,7 +8954,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T22:33:12Z</date>
+						<date>2018-09-24T23:48:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10073,11 +9993,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								c5ejAW3nLcs+
+								aWNaZxvzrA==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3253</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10177,31 +10097,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCsztY1
-				t42AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCsztY1uneA
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HArNfcRKAKgAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCs19xEpOOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10209,9 +10129,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
