--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T22:33:12Z</date>
+						<date>2018-09-25T20:22:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -150,6 +150,16 @@
 								<key>Size</key>
 								<integer>21870</integer>
 							</dict>
+							<key>files/stacks-image-9c884d0.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fU/F14sAci93
+								dY+HaHVrFw==
+								</data>
+								<key>Size</key>
+								<integer>243823</integer>
+							</dict>
 							<key>files/stacks-image-ae20feb-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -169,16 +179,6 @@
 								</data>
 								<key>Size</key>
 								<integer>61696</integer>
-							</dict>
-							<key>files/stacks-image-aea0b7a.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								2QCVzTq4XHe/
-								c577tgFN2A==
-								</data>
-								<key>Size</key>
-								<integer>16553</integer>
 							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
@@ -224,8 +224,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sjCuOlnj6vyf
-								9QBCLdGRVQ==
+								vd2vz66fejkC
+								dRc+TUvP4Q==
 								</data>
 								<key>Size</key>
 								<integer>70183</integer>
