--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3256,7 +3256,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-24T23:48:14Z</date>
+						<date>2018-10-02T14:16:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3605,11 +3605,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bZ4CSyQewwZM
-								kJwF54ORRw==
+								PQY2XvKgsSn1
+								5UoxxHPxMg==
 								</data>
 								<key>Size</key>
-								<integer>122355</integer>
+								<integer>122454</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5422,7 +5422,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-01T15:31:52Z</date>
+						<date>2018-10-02T14:16:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5831,11 +5831,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N4F0W493I4ev
-								ir0D4i+mJA==
+								bSOQuJvLQRf/
+								b8k4qTMfSw==
 								</data>
 								<key>Size</key>
-								<integer>196679</integer>
+								<integer>197000</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5861,11 +5861,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lHUSC7Ojkt9D
-								Bn9RPQtZsQ==
+								oJvbvEBTPL8D
+								arioeC3Q/w==
 								</data>
 								<key>Size</key>
-								<integer>151061</integer>
+								<integer>151506</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8934,7 +8934,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-01T15:31:52Z</date>
+						<date>2018-10-02T14:16:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9973,11 +9973,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								c5ejAW3nLcs+
+								aWNaZxvzrA==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3253</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10061,7 +10061,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAsTq2KJqJgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAsdqdsqDkgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10072,7 +10072,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCxOrYon5WA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCx2p2ypkyA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
