--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-01T15:31:52Z</date>
+						<date>2018-10-02T14:16:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N4F0W493I4ev
-								ir0D4i+mJA==
+								bSOQuJvLQRf/
+								b8k4qTMfSw==
 								</data>
 								<key>Size</key>
-								<integer>196679</integer>
+								<integer>197000</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -472,11 +472,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lHUSC7Ojkt9D
-								Bn9RPQtZsQ==
+								oJvbvEBTPL8D
+								arioeC3Q/w==
 								</data>
 								<key>Size</key>
-								<integer>151061</integer>
+								<integer>151506</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
